# posix-shell-rust

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  run.sh  test.sh
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  release.yml
src/: cmd.rs  constants.rs  errors.rs  lib.rs  macros.rs  main.rs  parse.rs  repl.rs
