[package]
name = "posix-shell"
version = "0.1.0"
authors = ["Ivan Lazarević"]
description = "A POSIX-Compliant Shell (CLI) Implementation in Rust"
repository = "https://github.com/ivanbgd/posix-shell-rust"
keywords = ["cli"]
categories = ["command-line-interface"]
license = "MIT"
edition = "2024"

[profile.release]
strip = "symbols"

[lib]
path = "src/lib.rs"

[[bin]]
name = "posix-shell"
path = "src/main.rs"

[dependencies]
