[package]
name = "posix-shell"
description = "A POSIX-Compliant Shell (CLI) Implementation in Rust"
version = "0.1.0"
authors = ["Ivan Lazarević"]
repository = "https://github.com/ivanbgd/posix-shell-rust"
license = "MIT"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["cli"]
edition = "2024"
rust-version = "1.89.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "posix-shell"
path = "src/main.rs"

[dependencies]

[profile.release]
strip = "symbols"
#lto = "fat"
#codegen-units = 1
